--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
-        "stm32f1xx_hal.h": "c"
+        "stm32f1xx_hal.h": "c",
+        "hallinterrupts.h": "c"
     },
     "C_Cpp.errorSquiggles": "Disabled"
 }
